# advana-desafio-mle-master

./: Dockerfile  Makefile  main.py  pyproject.toml
.github/: ci.yml
.github/workflows/: cd.yml  ci.yml
challenge/: api.py  exploration.ipynb  model.py
docs/: challenge.md
workflows/: cd.yml
